--- a/tools/styles/entertainment.css
+++ b/tools/styles/entertainment.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   color: #daedff;
   font-family: "Tourney", sans-serif;
+  overflow: hidden !important;
 }
 
 html {
@@ -14,7 +15,6 @@ body {
   /* background-color: #124779; */
   background-image: url("../images/image-1.jpg");
   height: 100vh;
-  overflow: hidden !important;
 }
 
 /* fonts */
@@ -50,7 +50,7 @@ header {
   align-items: center;
   padding: 1rem;
 
-  transform: translateY(-50px);
+  /* transform: translateY(-50px); */
   transition: 1s;
 }
 .social-media a:first-child {
@@ -90,7 +90,7 @@ nav {
   transition: all 4s;
 }
 
-nav a:nth-child(2),
+/* nav a:nth-child(2),
 nav a:nth-child(4) {
   transform: translate(-1000px, 50px);
   transition: all 1s;
@@ -99,7 +99,7 @@ nav a:nth-child(6),
 nav a:last-child {
   transform: translate(1000px, 50px);
   transition: all 1s;
-}
+} */
 
 nav p {
   opacity: 0;
@@ -118,65 +118,8 @@ nav ion-icon {
   display: none;
 }
 
-/* main */
-main {
-  background-color: transparent;
-  margin: 15rem 0;
-}
-.section-info {
-  padding: 10rem;
-  line-height: 1.5;
-  background-color: rgba(0, 0, 0, 0.9);
-
-  transform: translateX(-100%);
-  transition: all ease-out 1s;
-}
-
-.section-info p,
-.section-info h2,
-.section-info button {
-  text-transform: uppercase;
-  line-height: 2;
-
-  transition: all 0.75s;
-}
-.section-info:hover p,
-.section-info:hover h2,
-.section-info:hover ion-icon {
-  color: lightgreen !important;
-}
-.section-info:hover button {
-  color: lightgreen !important;
-  border: 1px solid lightgreen;
-}
-
-/*  */
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-main section:hover p .cog {
-  animation-name: rotate;
-  animation-duration: 2.5s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  transition: all 0.75s;
-}
-
-.info-link {
-  border: 1px solid #daedff;
-  padding: 0.5rem 1rem;
-  font-size: 1.8rem;
-  background-color: transparent;
-  cursor: pointer;
+.dot {
+  opacity: 1;
 }
 
 /* curtain */
@@ -185,68 +128,48 @@ main section:hover p .cog {
   position: absolute;
   top: 0;
   left: 0;
-  right: 100%;
+  right: 50%;
   bottom: 0;
 
   background-color: black;
 
   transition: all 1s;
-
-  z-index: 3;
 }
-/* .curtain-left ion-icon {
+.curtain-left ion-icon {
   font-size: 20rem;
   color: white;
   position: absolute;
   top: 40%;
-  left: unset;
+  left: 90%;
   right: 0;
 
   transition: all 1s;
-
-  z-index: 1;
-
-  transform: translate(-50%, -50%);
-} */
+}
 
 .curtain-right {
   position: absolute;
   top: 0;
-  left: 100%;
+  left: 50%;
   right: 0;
   bottom: 0;
 
   background-color: black;
 
   transition: all 1s;
-
-  z-index: 3;
 }
-/*
- .curtain-right ion-icon {
+.curtain-right ion-icon {
   font-size: 20rem;
   color: white;
   position: absolute;
   top: 40%;
-   right: unset; 
+  right: 89%;
   left: 10;
 
   transition: all 1s;
-
-  z-index: 1;
-} 
-*/
-/* query */
-@media (max-width: 750px) {
-  .section-info {
-    padding: 5rem;
-  }
 }
-@media (max-width: 550px) {
-  .section-info {
-    padding: 2rem;
-  }
 
+/* query */
+@media (max-width: 550px) {
   nav {
     position: fixed;
     top: 0;
@@ -270,16 +193,6 @@ main section:hover p .cog {
   }
 
   header {
-    display: flex;
     flex-direction: column;
-  }
-
-  .section-info {
-    padding: 1rem;
-  }
-}
-@media (max-width: 410px) {
-  main section p {
-    font-size: 1.3rem;
   }
 }
