--- a/tools/styles/style.css
+++ b/tools/styles/style.css
@@ -34,6 +34,13 @@ p {
 ion-icon {
   font-size: 3rem;
 }
+button {
+  background-color: transparent;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border: none;
+  transition: all 1s;
+}
 
 /* more font styles */
 a:link,
@@ -91,7 +98,7 @@ nav {
 }
 
 nav a:nth-child(2),
-nav a:nth-child(4) {
+nav button:nth-child(4) {
   transform: translate(-1000px, 50px);
   transition: all 1s;
 }
@@ -194,20 +201,6 @@ main section:hover p .cog {
 
   z-index: 3;
 }
-/* .curtain-left ion-icon {
-  font-size: 20rem;
-  color: white;
-  position: absolute;
-  top: 40%;
-  left: unset;
-  right: 0;
-
-  transition: all 1s;
-
-  z-index: 1;
-
-  transform: translate(-50%, -50%);
-} */
 
 .curtain-right {
   position: absolute;
@@ -222,20 +215,11 @@ main section:hover p .cog {
 
   z-index: 3;
 }
-/*
- .curtain-right ion-icon {
-  font-size: 20rem;
-  color: white;
-  position: absolute;
-  top: 40%;
-   right: unset; 
-  left: 10;
 
-  transition: all 1s;
+.links-hidden {
+  transform: translateX(-100%);
+}
 
-  z-index: 1;
-} 
-*/
 /* query */
 @media (max-width: 750px) {
   .section-info {
