--- a/tools/styles/entertainment.css
+++ b/tools/styles/entertainment.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   color: #daedff;
   font-family: "Tourney", sans-serif;
-  overflow: hidden !important;
 }
 
 html {
@@ -195,4 +194,25 @@ nav ion-icon {
   header {
     flex-direction: column;
   }
+}
+
+/* OOP styling */
+section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  text-align: center;
+  gap: 1rem;
+
+  width: 100%;
+  max-width: 130rem;
+  margin: 20rem auto;
+}
+
+section div {
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+section div img {
+  width: 100%;
+  object-fit: cover;
 }
