--- a/tools/styles/entertainment.css
+++ b/tools/styles/entertainment.css
@@ -14,6 +14,8 @@ body {
   /* background-color: #124779; */
   background-image: url("../images/image-1.jpg");
   height: 100vh;
+
+  overflow-y: hidden;
 }
 
 /* fonts */
@@ -128,19 +130,9 @@ nav ion-icon {
   top: 0;
   left: 0;
   right: 50%;
-  bottom: 0;
+  bottom: -450%;
 
   background-color: black;
-
-  transition: all 1s;
-}
-.curtain-left ion-icon {
-  font-size: 20rem;
-  color: white;
-  position: absolute;
-  top: 40%;
-  left: 90%;
-  right: 0;
 
   transition: all 1s;
 }
@@ -150,19 +142,9 @@ nav ion-icon {
   top: 0;
   left: 50%;
   right: 0;
-  bottom: 0;
+  bottom: -450%;
 
   background-color: black;
-
-  transition: all 1s;
-}
-.curtain-right ion-icon {
-  font-size: 20rem;
-  color: white;
-  position: absolute;
-  top: 40%;
-  right: 89%;
-  left: 10;
 
   transition: all 1s;
 }
@@ -195,24 +177,45 @@ nav ion-icon {
     flex-direction: column;
   }
 }
+/* article */
+article {
+  width: 100%;
+  max-width: 120rem;
+  margin: 5rem auto;
+  height: 10rem;
+  /* padding: 2rem; */
+}
+article h2 {
+  text-transform: uppercase;
+  font-size: 2.4rem;
+  /* padding: 1rem 0rem; */
+  background-color: rgba(0, 0, 0, 0.3);
+}
 
 /* OOP styling */
 section {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  /* grid-template-columns: repeat(8, 1fr); */
   text-align: center;
-  gap: 1rem;
+  /* gap: 1rem; */
 
   width: 100%;
   max-width: 130rem;
-  margin: 20rem auto;
-}
-
-section div {
-  background-color: rgba(0, 0, 0, 0.9);
+  margin: 10rem auto;
+  padding: 2rem;
 }
 
 section div img {
   width: 100%;
   object-fit: cover;
+  object-position: top;
+  height: 100%;
+}
+
+@media (max-width: 600px) {
+  article h2 {
+    font-size: 2rem;
+    padding: 1rem;
+  }
 }
