--- a/tools/styles/entertainment.css
+++ b/tools/styles/entertainment.css
@@ -12,10 +12,10 @@ html {
 }
 body {
   /* background-color: #124779; */
-  background-image: url("../images/image-1.jpg");
-  height: 100vh;
-
+  background-image: url("../images/image-20.jpg");
+  background-size: cover;
   overflow-y: hidden;
+  scroll-behavior: smooth;
 }
 
 /* fonts */
@@ -37,11 +37,18 @@ ion-icon {
 }
 
 /* more font styles */
-a:link,
-a:after,
-a:visited {
+nav button {
   text-decoration: none;
   text-transform: uppercase;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border: none;
+  font-size: 2rem;
+  background-color: transparent;
+  cursor: pointer;
+}
+.links-hidden {
+  transform: translateX(-100%);
 }
 
 /* header */
@@ -130,11 +137,13 @@ nav ion-icon {
   top: 0;
   left: 0;
   right: 50%;
-  bottom: -450%;
+  bottom: 0;
 
   background-color: black;
 
   transition: all 1s;
+
+  z-index: 100;
 }
 
 .curtain-right {
@@ -142,15 +151,70 @@ nav ion-icon {
   top: 0;
   left: 50%;
   right: 0;
-  bottom: -450%;
+  bottom: 0;
 
   background-color: black;
 
   transition: all 1s;
+
+  z-index: 100;
+}
+
+/* article */
+article {
+  width: 100%;
+  max-width: 120rem;
+  margin: 5rem auto;
+  height: 10rem;
+  /* padding: 2rem; */
+}
+article h2 {
+  text-transform: uppercase;
+  font-size: 2.4rem;
+  /* padding: 1rem 0rem; */
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+/* OOP styling */
+section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  /* grid-template-columns: repeat(8, 1fr); */
+  text-align: center;
+  /* gap: 1rem; */
+
+  width: 100%;
+  max-width: 130rem;
+  margin: 10rem auto;
+  padding: 2rem;
+}
+
+section div img {
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
+  height: 100%;
 }
 
 /* query */
-@media (max-width: 550px) {
+@media (max-width: 1250px) {
+  article h2 {
+    padding: 1rem;
+    font-size: 2rem;
+  }
+}
+@media (max-width: 600px) {
+  article h2 {
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 400px) {
+  article h2 {
+    font-size: 1.7rem;
+  }
+}
+
+@media (max-width: 567px) {
   nav {
     position: fixed;
     top: 0;
@@ -177,45 +241,15 @@ nav ion-icon {
     flex-direction: column;
   }
 }
-/* article */
-article {
-  width: 100%;
-  max-width: 120rem;
-  margin: 5rem auto;
-  height: 10rem;
-  /* padding: 2rem; */
-}
-article h2 {
-  text-transform: uppercase;
-  font-size: 2.4rem;
-  /* padding: 1rem 0rem; */
-  background-color: rgba(0, 0, 0, 0.3);
-}
 
-/* OOP styling */
-section {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  /* grid-template-columns: repeat(8, 1fr); */
-  text-align: center;
-  /* gap: 1rem; */
-
-  width: 100%;
-  max-width: 130rem;
-  margin: 10rem auto;
-  padding: 2rem;
-}
-
-section div img {
-  width: 100%;
-  object-fit: cover;
-  object-position: top;
-  height: 100%;
-}
-
-@media (max-width: 600px) {
-  article h2 {
-    font-size: 1.7rem;
-    padding: 1rem;
-  }
+/* scroller */
+.scroller {
+  position: fixed;
+  bottom: 20%;
+  right: 5%;
+  border: 2px solid #00172c;
+  font-size: 4rem;
+  padding: 1rem;
+  border-radius: 50%;
+  color: #124779;
 }
