--- a/tools/styles/style.css
+++ b/tools/styles/style.css
@@ -5,7 +5,7 @@
   color: #daedff;
   font-family: "Tourney", sans-serif;
 }
-
+/*550 - 567 */
 html {
   font-size: 62.5%;
   z-index: 2;
@@ -13,8 +13,8 @@ html {
 body {
   /* background-color: #124779; */
   background-image: url("../images/image-1.jpg");
-  height: 100vh;
-  overflow: hidden !important;
+  /* height: 100vh; */
+  overflow-x: hidden !important;
 }
 
 /* fonts */
@@ -97,13 +97,13 @@ nav {
   transition: all 4s;
 }
 
-nav a:nth-child(2),
+nav button:nth-child(2),
 nav button:nth-child(4) {
   transform: translate(-1000px, 50px);
   transition: all 1s;
 }
-nav a:nth-child(6),
-nav a:last-child {
+nav button:nth-child(6),
+nav button:last-child {
   transform: translate(1000px, 50px);
   transition: all 1s;
 }
@@ -128,7 +128,7 @@ nav ion-icon {
 /* main */
 main {
   background-color: transparent;
-  margin: 15rem 0;
+  margin: 10rem 0;
 }
 .section-info {
   padding: 10rem;
