--- a/tools/styles/footer.css
+++ b/tools/styles/footer.css
@@ -33,3 +33,9 @@ footer div {
   opacity: 0;
   transition: opacity 0.5s;
 }
+
+@media (max-width: 700px) {
+  footer {
+    flex-direction: column;
+  }
+}
