--- a/tools/styles/footer.css
+++ b/tools/styles/footer.css
@@ -15,23 +15,38 @@ footer div {
   flex-direction: column;
   gap: 1rem;
 }
+.newsletter label {
+  color: lightblue;
+}
+
 .newsletter input {
   padding: 1rem;
   font-size: 2rem;
-  color: red;
+  color: blue;
+}
+.newsletter input::placeholder {
+  color: blue;
 }
 
 .newsletter button {
   width: 100%;
   max-width: 13rem;
   padding: 0.5rem 1rem;
-  color: black !important;
+  color: blue !important;
   background-color: white;
   font-size: 2rem;
 }
 .newsletter p {
   opacity: 0;
   transition: opacity 0.5s;
+}
+
+a,
+ion-icon {
+  vertical-align: middle;
+}
+a {
+  display: block;
 }
 
 @media (max-width: 700px) {
