--- a/tools/styles/entertainment.css
+++ b/tools/styles/entertainment.css
@@ -194,7 +194,7 @@ section div img {
   object-fit: cover;
   object-position: center;
   height: 100%;
-  aspect-ratio: 4/3;
+  aspect-ratio: 5/4;
 }
 
 /* query */
@@ -253,4 +253,5 @@ section div img {
   padding: 1rem;
   border-radius: 50%;
   color: #124779;
+  z-index: 100;
 }
