--- a/tools/styles/footer.css
+++ b/tools/styles/footer.css
@@ -1,11 +1,18 @@
 /* footer */
+
 footer {
   display: flex;
   justify-content: space-around;
 
   background-color: rgba(0, 0, 0, 0.95);
   padding: 1.2rem;
-  height: 100%;
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  /* padding: 2rem; */
 }
 footer div {
   font-size: 2rem;
@@ -15,6 +22,11 @@ footer div {
   flex-direction: column;
   gap: 1rem;
 }
+.newsletter div {
+  display: flex;
+  flex-direction: row;
+}
+
 .newsletter label {
   color: lightblue;
 }
@@ -23,6 +35,8 @@ footer div {
   padding: 1rem;
   font-size: 2rem;
   color: blue;
+  border: none;
+  outline: none;
 }
 .newsletter input::placeholder {
   color: blue;
@@ -31,10 +45,15 @@ footer div {
 .newsletter button {
   width: 100%;
   max-width: 13rem;
-  padding: 0.5rem 1rem;
+
   color: blue !important;
   background-color: white;
   font-size: 2rem;
+  padding: 1rem;
+  margin-left: -1rem;
+  cursor: pointer;
+
+  border: none;
 }
 .newsletter p {
   opacity: 0;
@@ -49,8 +68,28 @@ a {
   display: block;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 950px) {
   footer {
     flex-direction: column;
+  }
+}
+@media (max-width: 450px) {
+  p,
+  .newsletter label,
+  .newsletter input,
+  .newsletter button,
+  .social-media a,
+  .social-media ion-icon {
+    font-size: 1.4rem;
+  }
+}
+@media (max-width: 363px) {
+  .newsletter button {
+    margin-left: 0;
+  }
+  .newsletter div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
   }
 }
