--- a/tools/styles/footer.css
+++ b/tools/styles/footer.css
@@ -7,7 +7,7 @@ footer {
   background-color: rgba(0, 0, 0, 0.95);
   padding: 1.2rem;
 
-  position: fixed;
+  position: fixed !important;
   bottom: 0;
   left: 0;
   right: 0;
